updated font path in CSS

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Aeonik';
-    src: url(../Media/Fonts/Aeonik-Regular.otf);
+    src: url(./fonts/Aeonik/Aeonik-Regular.otf);
 }
 
 * {
