--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Aeonik';
-    src: url(./fonts/Aeonik/Aeonik-Regular.otf);
+    src: url(../media/fonts/Aeonik/Aeonik-Regular.otf);
 }
 
 * {
@@ -10,31 +10,42 @@
 html,
 body {
     margin: 0;
-}
-
-#wrapper {
     position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-#strColor {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+}
+
+header {
+    position: absolute;
+    top: 24px;
+    z-index: 99;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    height: fit-content;
+    width: fit-content;
+}
+
+
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 100%;
 }
 
-#colorHexStr {
-    margin-top: 80px;
-    font-size: 20px;
-    color: black;
-}
-
-#strInput,
-#strInput:focus {
+main > #strInput,
+main > #strInput:focus {
     height: 5vh;
     padding: 2vh;
     width: 90%;
@@ -48,27 +59,36 @@ body {
 
 ::placeholder { 
     color: #c0c0c0;
-  }
-
-.title {
-    position: absolute;
-    z-index: 99;
-
-    top: 24px;
 }
 
-.footer {
-    position: absolute;
-    z-index: 99;
-
-    bottom: 56px;
+main > #colorHexStr {
+    margin-top: 80px;
+    font-size: 20px;
+    color: black;
 }
 
-.footer-version {
-    position: absolute;
-    z-index: 99;
 
-    bottom: 24px;
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 2vh;
+
+    z-index: 99;
+}
+
+footer > #developerCollabText {
+    font-weight: bold;
+    font-style: normal;
+}
+
+footer > #appVersionText {
+    font-weight: light;
+    font-style: italic;
 }
 
 a {
@@ -80,14 +100,16 @@ a:hover {
     text-decoration: underline;
 }
 
+
+
 @media only screen and (max-width: 800px) {
-    #colorHexStr {
+    main > #colorHexStr {
         margin-top: 40px;
         font-size: 16px;
     }
     
-    #strInput,
-    #strInput:focus {
+    main > #strInput,
+    main > #strInput:focus {
         height: 10vh;
         padding: 0;
         width: 90%;
